# persona0

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  persona0_deployment_guide_v0.10.docx  persona0_deployment_guide_v0.10.md  project_review.md  project_summary.md  pyproject.toml  requirements.txt
.github/workflows/: lint-format.yml  release.yml  security-deps.yml  tests.yml  type-check.yml
.knowledge/: initial_research_and_instructions.md
.knowledge/initial_research/: action_plan.md  architecture.md  ego_data.md
config/: defaults.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
config/profiles/: dev.yaml  prod.yaml  staging.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml
docs/: operations.md
n8n/: README.md
n8n/code-snippets/: drive_module.js  emotion_module.js  governance.js  retrieval.js  state_schema.js
n8n/config/: credentials_template.json  persona_config.json
n8n/workflows/: fast_tick_cycle.json  interaction_cycle.json  macro_cycle.json  slow_tick_cycle.json
src/cli/: trace_viewer.py
src/engine/: contracts.py  cycle_log.py  default_setup.py  governance.py  orchestrator.py  pii_redaction.py  retrieval.py  telemetry.py
src/eval/: __init__.py  metrics.py  scenarios.py
src/runtime/: __init__.py  healthcheck.py  metrics_server.py  scheduler.py
src/schema/: mutability.py  records.py  state.py  (+1 more)
tests/: test_config_validation_profiles.py  test_contracts.py  test_default_setup.py  test_embedding_writes.py  test_fast_tick.py  test_governance.py  test_llm_adapter_integration.py  test_macro_tick.py  test_orchestrator.py  test_retrieval_and_interaction.py  test_runtime_config.py  test_schema.py  test_slow_tick.py  test_telemetry.py
(+60 files in other folders)
