[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "persona0"
version = "0.1.0"
description = "Ego Engine — external cognitive runtime for persistent LLM identity"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "build>=1.2",
    "twine>=5.1",
    "cryptography>=46.0.5",
    "wheel>=0.46.2",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/cli/trace_viewer.py"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

